--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "main": "ydict.js",
   "description": "Yet another ydict implmentation in node.js",
+  "bin": {
+      "ydict.js": "./ydict.js"
+  },
   "dependencies": {
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
