--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "description": "Yet another ydict implmentation in node.js",
   "license": "MIT",
   "bin": {
-      "ydict.js": "./ydict.js"
+    "ydict.js": "ydict.js"
   },
   "dependencies": {
-    "cheerio": "~0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "colors": "~0.6.2",
     "request": "~2.88.2"
   },
-  "devDependencies": {},
   "author": "Shiao-An Yuan <shiao.an.yuan@gmail.com>",
   "repository": {
     "type": "git",
